--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,8 +43,25 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2.9.0
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
-          fail-if-branches-less-than: 100
-
+          generate-branches-badge: true
+          generate-coverage-badge: true
+          fail-on-branches-decrease: true
+          fail-on-coverage-decrease: true
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+      - name: Commit and push the badge (if it changed)
+        uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
+          message: 'commit badge'
+          add: '*.svg'
+      - name: Upload JaCoCo coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/
   build_and_publish_docker_image:
     name: Publish to Docker Hub
     runs-on: ubuntu-latest
