--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Run Test Coverage
         run: ./gradlew jacocoTestReport
       - name: Jacoco
+        id: jacoco
         uses: cicirello/jacoco-badge-generator@v2.9.0
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
@@ -47,6 +48,7 @@ jobs:
           generate-coverage-badge: true
           fail-on-branches-decrease: true
           fail-on-coverage-decrease: true
+          generate-summary: true
       - name: Log coverage percentage
         run: |
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
